discussion/kv_engine/174293/174293_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51877: Let SCUGT::tick rollover overuse

The way we're planning to use the Gauge is to just check if
there is any room available before starting to execute an
operation, and once the operation completes we'll account for
the data being used.

A problem with the previous implementation was that you could
overuse your quota a lot, and every time you entered a new time
slot you would be free to do it over again.

If you for instance set up a limit of 5k CU/s the max document
size you can operate on is 5M. There was nothing stopping you
from running a ton of parallel operations on 20MB documents
(as in the beginning of the time slot there was 5K CU available
so you could start all operations) and when all of they complete
you have used your quota for a long time, but instead you would
start with clean sheets at the next second boundary.

This patch let the over-use of the quota roll over to the next
timeslot.

Change-Id: I43a9a2a3dbcb61fa4ce9aaaea3a09894ec85f356

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-04-29 14:18:01.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-29 14:46:29.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17197/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/sloppy_compute_unit_gauge_test.cc:99:10: error: no type named "thread" in namespace "std" [clang-diagnostic-error]
    std::thread other{[&gauge, &stop]() {
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/sloppy_compute_unit_gauge_test.cc:108:18: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
            std::this_thread::yield();
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17197/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/sloppy_compute_unit_gauge_test.cc:99:10:
error: no type named "thread" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17197/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19304/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-29T14:25:59.526Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-29T14:25:59.526Z] Expected equality of these values:
[2022-04-29T14:25:59.526Z]   100
[2022-04-29T14:25:59.526Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-29T14:25:59.526Z]     Which is: 95
[2022-04-29T14:25:59.526Z] vb:0 not fully resident after eviction
[2022-04-29T14:25:59.526Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-29T14:25:59.526Z] Expected equality of these values:
[2022-04-29T14:25:59.526Z]   100
[2022-04-29T14:25:59.526Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-29T14:25:59.526Z]     Which is: 97
[2022-04-29T14:25:59.526Z] vb:1 not fully resident after eviction
[2022-04-29T14:25:59.526Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (925 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19304/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18966/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-29T14:23:32.038Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-29T14:23:32.038Z] Expected equality of these values:
[2022-04-29T14:23:32.038Z]   100
[2022-04-29T14:23:32.038Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-29T14:23:32.038Z]     Which is: 95
[2022-04-29T14:23:32.038Z] vb:0 not fully resident after eviction
[2022-04-29T14:23:32.038Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-29T14:23:32.038Z] Expected equality of these values:
[2022-04-29T14:23:32.038Z]   100
[2022-04-29T14:23:32.038Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-29T14:23:32.038Z]     Which is: 97
[2022-04-29T14:23:32.038Z] vb:1 not fully resident after eviction
[2022-04-29T14:23:32.038Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (338 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18966/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18126/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2327 Test failed: `" (Expected `376013" to be less than or equal to `368640" - Unexpected fileSize for vbucket)
[2022-04-29T14:29:23.774Z] (248 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18126/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38497/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45833/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16159/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6916/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6824/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19995/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27370/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
